# diffusion

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CLHelper.cpp  CLHelper.h  CMakeLists.txt  OpenCL_HelloWorld.cpp  datagrid.cpp  datagrid.h  resource.h
src/assets/: init.grd  kernel.cl  step-diffusion_cell-by-cell.cl
